Fix: Length of later list thing truncation

--- a/src/components/Layout/DownloadSidebar/LaterList/ListItem/ListItem.module.scss
+++ b/src/components/Layout/DownloadSidebar/LaterList/ListItem/ListItem.module.scss
@@ -39,7 +39,7 @@
         text-align: start;
         text-overflow: ellipsis;
         white-space: nowrap;
-        width: 85%;
+        width: 100%;
       }
     }
   }
